tests/snapshots/spanshot_request@3690256715296134489.snap
---
source: tests/trace_solver.rs
description: "RuleOptions { ref_on_ref: Skip, mut_on_ref: ResetBindingMode, allow_ref_pat_on_ref_mut: false, simplify_expressions: false, eat_two_layers: true, eat_inherited_ref_alone: false }"
---
Query: `[&x]: &[T]`

[&x] @ p: &[T]
// Applying rule `ConstructorRef`
&x @ &(*p).0: &T
// ERROR: no rules applies to &x @ &(*p).0: &T
