tests/snapshots/spanshot_request@3987638743371010643.snap
---
source: tests/trace_solver.rs
description: "RuleOptions { ref_on_expr: AllocTemporary, allow_ref_pat_on_ref_mut: true, simplify_expressions: true }"
---
Query: `&x: T`

&x @ p: T
// ERROR: no rules applies to &x @ p: T
